--- a/talks/index.html
+++ b/talks/index.html
@@ -67,6 +67,13 @@
         <td style="background: #ffffff" colspan="5" align="center">2018</td>
     </tr>
     <tr>
+        <td>59.</td>
+        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop J-Santa 2018</td>
+        <td><a href="https://j-santa.pl">Discussion Panel: Architecture vs Technology</a></td>
+        <td>08.12.2018</td>
+        <td>Lublin/Poland</td>
+    </tr>
+    <tr>
         <td>58.</td>
         <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop J-Santa 2018</td>
         <td><a href="https://j-santa.pl">The Dark Side of Java 8</a></td>
