--- a/talks/index.html
+++ b/talks/index.html
@@ -46,8 +46,15 @@
         <td>61.</td>
         <td data-location="50.800784, 6.876390" data-place="PhantasiaLand">JavaLand 2019</td>
         <td><a href="">The Dark Side of Java 8</a></td>
-        <td>19.03.2019</td>
+        <td>20.03.2019</td>
         <td>Bruhl/Germany</td>
+    </tr>
+    <tr>
+        <td>44.</td>
+        <td data-location="47.381980,8.535409" data-place="Digicomp">VoxxedDaysZurich 2019</td>
+        <td><a href="https://voxxeddays.com/zurich/">The Dark Side of Java 8</a></td>
+        <td>19.03.2018</td>
+        <td>Zurich/Switzerland</td>
     </tr>
     <tr>
         <td>60.</td>
