--- a/talks/index.html
+++ b/talks/index.html
@@ -42,29 +42,37 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2019</td>
     </tr>
+        
     <tr>
-        <td>61.</td>
+        <td>64.</td>
+        <td data-location="41.409246, 2.219343" data-place="Centre de Convencions Internacional de Barcelona">JBCNConf 2019</td>
+        <td><a href="http://www.jbcnconf.com/2019/">Fantastic Frameworks and How to Avoid Them</a></td>
+        <td>29.05.2019</td>
+        <td>Barcelona/Spain</td>
+    </tr>
+    <tr>
+        <td>63.</td>
         <td data-location="50.800784, 6.876390" data-place="PhantasiaLand">JavaLand 2019</td>
         <td><a href="">The Dark Side of Java 8</a></td>
         <td>20.03.2019</td>
         <td>Bruhl/Germany</td>
     </tr>
     <tr>
-        <td>44.</td>
+        <td>62.</td>
         <td data-location="47.381980,8.535409" data-place="Digicomp">VoxxedDaysZurich 2019</td>
         <td><a href="https://voxxeddays.com/zurich/">The Dark Side of Java 8</a></td>
         <td>19.03.2018</td>
         <td>Zurich/Switzerland</td>
     </tr>
     <tr>
-        <td>60.</td>
+        <td>61.</td>
         <td data-location="" data-place="">???</td>
         <td><a href="">???</a></td>
         <td>23.02.2019</td>
         <td>Lviv/Ukraine</td>
     </tr>
     <tr>
-        <td>59.</td>
+        <td>60.</td>
         <td data-location="50.870255, 20.628023" data-place="Bohomass Lab">Kielce JUG</td>
         <td><a href="">???</a></td>
         <td>??.02.2019</td>
