--- a/talks/index.html
+++ b/talks/index.html
@@ -83,8 +83,8 @@
     <tr>
         <td>60.</td>
         <td data-location="50.870255, 20.628023" data-place="Bohomass Lab">Kielce JUG</td>
-        <td><a href="">???</a></td>
-        <td>??.02.2019</td>
+        <td><a href="https://www.meetup.com/Kielce-Java-User-Group/">Fantastic Frameworks and How to Avoid Them</a></td>
+        <td>31.01.2019</td>
         <td>Kielce/Poland</td>
     </tr>
     <tr>
