--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -106,6 +106,8 @@
     <img src="img/79.png" width="800"/>
     <img src="img/80.png" width="800"/>
     <img src="img/81.png" width="800"/>
+    <img src="img/82.png" width="800"/>
+    <img src="img/83.png" width="800"/>
 </div>
 
 </body>
