--- a/talks/index.html
+++ b/talks/index.html
@@ -44,6 +44,14 @@
     </tr>
         
     <tr>
+        <td>67.</td>
+        <td data-location="59.444370, 24.751092" data-place="Kultuurikatel">GeekOUT 2019</td>
+        <td><a href="https://2019.geekout.ee">Purely Functional Data Structures in Java</a></td>
+        <td>26.09.2019</td>
+        <td>Tallinn/Estonia</td>
+    </tr>
+        
+    <tr>
         <td>66.</td>
         <td data-location="41.409246, 2.219343" data-place="Centre de Convencions Internacional de Barcelona">JBCNConf 2019</td>
         <td><a href="http://www.jbcnconf.com/2019/">Fantastic Frameworks and How to Avoid Them</a></td>
@@ -54,7 +62,7 @@
     <tr>
         <td>65.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">GeeCON 2019</td>
-        <td><a href="https://geecon.org">Purely Functional Data Structures</a></td>
+        <td><a href="https://geecon.org">Purely Functional Data Structures in Java</a></td>
         <td>15.05.2019</td>
         <td>Cracow/Poland</td>
     </tr>
@@ -87,6 +95,7 @@
         <td>19.03.2018</td>
         <td>Zurich/Switzerland</td>
     </tr>
+    <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
         <td>60.</td>
         <td data-location="50.870255, 20.628023" data-place="Bohomass Lab">Kielce JUG</td>
@@ -97,7 +106,6 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2018</td>
     </tr>
-    <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
         <td>59.</td>
         <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop J-Santa 2018</td>
