--- a/talks/index.html
+++ b/talks/index.html
@@ -69,10 +69,10 @@
         
     <tr>
         <td>64.</td>
-        <td data-location="51.758991,19.469209" data-place="Hotel Ambasador Premium">Segfault Łódź 2019</td>
-        <td><a href="http://segfault.events/lodz2019/">Fantastic Frameworks and How to Avoid Them</a></td>
+        <td data-location="50.450033, 30.443045" data-place="Mercure Kyiv Congress">JEEConf 2019</td>
+        <td><a href="https://jeeconf.com">-</a></td>
         <td>26.04.2019</td>
-        <td>Łódź/Poland</td>
+        <td>Kiev/Ukraine</td>
     </tr>
     <tr>
         <td>63.</td>
