--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -109,7 +109,7 @@
     <img src="img/82.png" width="800"/>
     <img src="img/83.png" width="800"/>
     <img src="img/84.jpg" width="800"/>
-    <img src="img/85.jpg" width="800"/>
+    <img src="img/85.png" width="800"/>
 </div>
 
 </body>
