Upgrade the talk

--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -115,6 +115,11 @@
                 <li>...</li>
             </ul>
         </section>
+
+        <section>
+            <h2>Java 12 - 3.19 🎉</h2>
+        </section>
+
         <section>
 
           <h2>LTS Releases:</h2>
@@ -790,6 +795,7 @@
                 1
                 2
                 3
+                4
                 5
                 6
                 7
