--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -77,7 +77,7 @@
 
         <section>
             <h2>Java 8</h2>
-            <img src="img/puke.gif" width="50%"/>
+            <img class="fragment" src="img/puke.gif" width="50%"/>
         </section>
 
         <section>
