--- a/talks/index.html
+++ b/talks/index.html
@@ -114,7 +114,7 @@
     <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
         <td>61.</td>
-        <td data-location="47.381980,8.535409" data-place="Digicomp">VoxxedDaysZurich 2019</td>
+        <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich 2019</td>
         <td><a href="https://voxxeddays.com/zurich/">The Dark Side of Java 8</a></td>
         <td>19.03.2018</td>
         <td>Zurich/Switzerland</td>
