Add Unicode attribution for @tnurkiewicz

--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -624,6 +624,10 @@
             <h4>"To Try or not to Try, there is no throws"</h4>
             <small>Yoda, ~41:3</small>
         </section>
+
+        <section>
+            <h3>Usage of Unicode characters inspired by @tnurkiewicz</h3>
+        </section>
         <!--https://blogs.msdn.microsoft.com/ericlippert/2008/09/10/vexing-exceptions/-->
         <!--http://wiki.c2.com/?UseExceptionsInsteadOfErrorValues-->
     </div>
