--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -626,7 +626,7 @@
         </section>
 
         <section>
-            <h3>Usage of Unicode characters inspired by @tnurkiewicz</h3>
+           <!-- <h3>Usage of Unicode characters inspired by @tnurkiewicz</h3>-->
         </section>
         <!--https://blogs.msdn.microsoft.com/ericlippert/2008/09/10/vexing-exceptions/-->
         <!--http://wiki.c2.com/?UseExceptionsInsteadOfErrorValues-->
