Add annotations slide

--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -53,7 +53,7 @@
 <div class="reveal">
 
     <div class="footer">
-        <small>Twitter/GitHub: <a href="http://twitter.com/pivovarit">@pivovarit</a></small>
+        <small><a href="http://twitter.com/pivovarit">@pivovarit</a></small>
     </div>
 
     <!-- Any section element inside of this container is displayed as a slide -->
@@ -135,6 +135,12 @@
                 (...) It’s not a web-framework but rather a more general toolkit for providing and consuming HTTP-based services.
             </blockquote>
             <small>https://doc.akka.io/docs/akka-http/current/introduction.html#philosophy</small>
+        </section>
+
+        <section>
+            <img src="img/annotations.png" width="40%"/><br/>
+            <small>https://twitter.com/alexelcu/status/1114016039841538048</small>
+
         </section>
 
         <section>
