--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -111,6 +111,7 @@
     <img src="img/84.jpg" width="800"/>
     <img src="img/85.png" width="800"/>
     <img src="img/86.png" width="800"/>
+    <img src="img/87.png" width="800"/>
 </div>
 
 </body>
