--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -72,6 +72,12 @@
 	        <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
         </section>
 
+        <section>
+            TODO
+            https://github.com/scala/bug/issues/7838
+            https://stackoverflow.com/questions/41934690/are-scala-immutable-collections-thread-safe
+        </section>
+
 
         <section>
             <h2>Thank You!</h2>
