--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -53,7 +53,7 @@
 <div class="reveal">
 
     <div class="footer">
-        <small>Twitter/GitHub: <a href="http://twitter.com/pivovarit">@pivovarit</a></small>
+        <small><a href="http://twitter.com/pivovarit">@pivovarit</a></small>
     </div>
 
     <!-- Any section element inside of this container is displayed as a slide -->
@@ -70,6 +70,16 @@
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Lead Engineer @ <a href="https://twitter.com/CasumoTech">CasumoTech</a></h2>
 	        <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
+        </section>
+
+
+        <section>
+            <blockquote>
+                "Haskell computations produce a lot of memory garbage - much more than conventional imperative languages."
+                <br> (...)
+                <br> "It's not uncommon to produce 1gb of data per second ..."
+            </blockquote>
+            <small>https://wiki.haskell.org/GHC/Memory_Management</small>
         </section>
 
 
