Add initial slides

--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -72,6 +72,14 @@
 	        <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
         </section>
 
+        <section>
+        </section>
+
+        <section>
+            <img src="img/answer.gif" width="50%"/>
+            <h1 class="fragment">Immutability</h1>
+        </section>
+
 
         <section>
             <blockquote>
