--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -108,14 +108,14 @@
 
 
 
-        <section>
-            TODO
-            http://stackoverflow.com/questions/1990464/efficiency-of-purely-functional-programming
-            https://blogs.oracle.com/jrose/larval-objects-in-the-vm
-            https://patentimages.storage.googleapis.com/17/1b/f8/9b0c4ee3cf377f/US6438560.pdf
-            https://github.com/scala/bug/issues/7838
-            https://stackoverflow.com/questions/41934690/are-scala-immutable-collections-thread-safe
-        </section>
+<!--        <section>-->
+<!--            TODO-->
+<!--            http://stackoverflow.com/questions/1990464/efficiency-of-purely-functional-programming-->
+<!--            https://blogs.oracle.com/jrose/larval-objects-in-the-vm-->
+<!--            https://patentimages.storage.googleapis.com/17/1b/f8/9b0c4ee3cf377f/US6438560.pdf-->
+<!--            https://github.com/scala/bug/issues/7838-->
+<!--            https://stackoverflow.com/questions/41934690/are-scala-immutable-collections-thread-safe-->
+<!--        </section>-->
 
 
         <section>
