Add Finger Tree

--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -61,6 +61,7 @@
 
         <section>
             <h1>Purely Functional Data Structures</h1>
+            <h4>Practical Side of Implementing Immutable Structures</h4>
             <br>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
@@ -96,7 +97,6 @@
             Is String immutable?
         </section>
 
-
         <section>
             <blockquote>
                 "Haskell computations produce a lot of memory garbage - much more than conventional imperative languages."
@@ -105,6 +105,22 @@
             </blockquote>
             <small>https://wiki.haskell.org/GHC/Memory_Management</small>
         </section>
+
+        <section>
+            <h2>Finger Tree</h2>
+            <img src="img/finger-tree2.png" width="50%"/>
+            <br>
+            <small><a href="http://www.staff.city.ac.uk/~ross/papers/FingerTree.pdf">http://www.staff.city.ac.uk/~ross/papers/FingerTree.pdf</a></small>
+        </section>
+
+        <section>
+            http://www.staff.city.ac.uk/~ross/papers/FingerTree.pdf
+            http://andrew.gibiansky.com/blog/haskell/finger-trees/
+            https://github.com/vavr-io/vavr/issues/569
+        </section>
+
+
+
 
 
 
