--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -207,6 +207,9 @@
 
         </section>
 
+        <section>
+            <img class="fragment" src="img/types-are-a-lie.jpeg"/>
+        </section>
 
         <section>
             <img class="fragment" src="img/datatype.png"/>
