--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -68,12 +68,6 @@
         </section>
 
         <section>
-            <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
-            <h2>Lead Engineer @ <a href="https://twitter.com/CasumoTech">CasumoTech</a></h2>
-	        <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
-        </section>
-
-        <section>
         </section>
 
         <section>
@@ -136,10 +130,17 @@
 
 
         <section>
-            <h2>Thank You!</h2>
+
+        </section>
+        <section>
+            <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
+            <h2>Lead Software Engineer @ <a href="https://twitter.com/CasumoTech">CasumoTech</a></h2>
+            <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
+            <br>
             <h4><a href="https://pivovarit.github.io/talks/purely-functional-data-structures">https://pivovarit.github.io/talks/purely-functional-data-structures</a> </h4>
             <img src="img/talk_qr.png"/>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
+            <h2>Thank You!</h2>
         </section>
     </div>
 </div>
