--- a/talks/wip/pragmatic-fp/index.html
+++ b/talks/wip/pragmatic-fp/index.html
@@ -67,6 +67,10 @@
         </section>
 
         <section>
+
+            <blockquote>
+                Happy families are all alike; every unhappy family is unhappy in its own way. — Tolstoy: Anna Karenina
+            </blockquote>
         </section>
 
 
