--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -175,6 +175,24 @@
         </section>
 
         <section>
+            // TODO Collections API vs Immutability
+        </section>
+
+        <section>
+            // TODO Persistent Collections
+            // faux-thread-safety
+        </section>
+
+        <section>
+            // TODO Naive Implementations (banker's queue)
+        </section>
+
+        <section>
+            // TODO Smart Implementations (tries, finger trees)
+            // cache locality issues
+        </section>
+
+        <section>
             <h2>Finger Tree</h2>
             <img src="img/finger-tree2.png" width="50%"/>
             <br>
@@ -182,10 +200,15 @@
         </section>
 
         <section>
-            https://medium.com/@johnmcclean/dysfunctional-programming-in-java-7-immutable-collections-83ba78aaf4dd
-            http://www.staff.city.ac.uk/~ross/papers/FingerTree.pdf
-            http://andrew.gibiansky.com/blog/haskell/finger-trees/
-            https://github.com/vavr-io/vavr/issues/569
+            // TODO libraries
+        </section>
+
+        <section>
+            // refs, paper, what to explore next
+        </section>
+
+        <section>
+
         </section>
 
 
@@ -195,6 +218,10 @@
 
 <!--        <section>-->
 <!--            TODO-->
+       <!-- https://medium.com/@johnmcclean/dysfunctional-programming-in-java-7-immutable-collections-83ba78aaf4dd
+        http://www.staff.city.ac.uk/~ross/papers/FingerTree.pdf
+        http://andrew.gibiansky.com/blog/haskell/finger-trees/
+        https://github.com/vavr-io/vavr/issues/569-->
 <!--            http://stackoverflow.com/questions/1990464/efficiency-of-purely-functional-programming-->
 <!--            https://blogs.oracle.com/jrose/larval-objects-in-the-vm-->
 <!--            https://patentimages.storage.googleapis.com/17/1b/f8/9b0c4ee3cf377f/US6438560.pdf-->
