--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -181,6 +181,7 @@
         <section>
             // TODO Persistent Collections
             // faux-thread-safety
+            // String as persistent data structure
         </section>
 
         <section>
