--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -63,6 +63,8 @@
             <h1>Purely Functional Data Structures</h1>
             <h4>Practical Side of Implementing Immutable Structures</h4>
             <br>
+            <br>
+            <br>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
         </section>
@@ -100,6 +102,8 @@
         <section>
             <h3>Keys to maintain</h3>
         </section>
+
+
 
 
 
@@ -178,7 +182,6 @@
 
         </section>
 
-
         <section>
             <blockquote>
                 "Haskell computations produce a lot of memory garbage - much more than conventional imperative languages."
@@ -186,6 +189,15 @@
                 <br> "It's not uncommon to produce 1gb of data per second ..."
             </blockquote>
             <small>https://wiki.haskell.org/GHC/Memory_Management</small>
+        </section>
+
+        <section>
+            <blockquote>
+                A data structure that supports multiple versions is called persistent while a data structure that allows only a single version at a time is called ephemeral
+            </blockquote>
+            <small>
+                "Making data structures persistent" - James R. Driscoll, Neil Sarnak, Daniel D. K. Sleator, and Robert E. Tarjan
+            </small>
         </section>
 
         <section>
