--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -229,6 +229,11 @@
 
         <section>
             // TODO Collections API vs Immutability
+            // TODO undead unicorn
+            // TODO "solving concurrency"
+            // TODO cache locality issues
+            // TODO single contention point
+            // TODO lock-free GC issues
         </section>
 
         <section>
